Fix Horizontal Scroll

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: 'Barlow', sans-serif;
+  overflow-x: hidden;
 }
 
 header {
